[gd_scene load_steps=8 format=3 uid="uid://by0l42cakh8m1"]

[ext_resource type="Texture2D" uid="uid://bs61dpjm531vh" path="res://Sprites/ui/play_again_button/play_again1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bxkv5gambio6v" path="res://Sprites/ui/back_to_menu_button/back_to_menu2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dkoavhl614n56" path="res://Sprites/ui/back_to_menu_button/back_to_menu1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dr3m3pc8if6jr" path="res://Sprites/ui/play_again_button/play_again2.png" id="4"]
[ext_resource type="FontFile" path="res://Fonts/heartbit2x.tres" id="5"]
[ext_resource type="Script" path="res://Scripts/End.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://jovevpemrhyx" path="res://Sprites/ui/menu/black_bg.png" id="7_fe4hi"]

[node name="End" type="Node2D"]
script = ExtResource("6")

[node name="End" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="End"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1200.0
offset_bottom = 756.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_fe4hi")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="End"]

[node name="Control" type="Control" parent="End/CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -132.0
offset_right = -88.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="CenterContainer" type="CenterContainer" parent="End/CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="End/CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayAgain" type="TextureButton" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture_normal = ExtResource("1")
texture_pressed = ExtResource("1")
texture_hover = ExtResource("4")

[node name="BackToMenu" type="TextureButton" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture_normal = ExtResource("3")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("2")

[node name="GradeLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "grade:"
vertical_alignment = 1

[node name="GradeNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "final score: "
vertical_alignment = 1

[node name="ScoreNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "max combo:"
vertical_alignment = 1

[node name="ComboNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GreatLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "great:"
vertical_alignment = 1

[node name="GreatNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoodLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "good:"
vertical_alignment = 1

[node name="GoodNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="OkayLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "okay:"
vertical_alignment = 1

[node name="OkayNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MissedLabel" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.61451, 3.97079e-07, 4.81307e-07, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
text = "missed:"
vertical_alignment = 1

[node name="MissedNumber" type="Label" parent="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("5")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="End/CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
